fix #34 more spacing

--- a/style.scss
+++ b/style.scss
@@ -137,7 +137,7 @@ $hover-color: #ffdd05;
 .fa.super {
   vertical-align: super;
   font-size: 50%;
-  margin-left: -.5em;
+  margin-left: -.1em;
 }
 
 //if we render in headless mode
