--- a/styles/_provvis.scss
+++ b/styles/_provvis.scss
@@ -49,6 +49,10 @@
       right: 0.1em;
     }
 
+    .icon {
+      margin-right: 0.3em;
+    }
+
 
     &.doi-xs {
       .sthumbnail, .slabel, .icon {
